--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,6 +1,6 @@
 {
-  "robotWidth": 0.9,
-  "robotLength": 0.9,
+  "robotWidth": 0.938,
+  "robotLength": 0.938,
   "holonomicMode": true,
   "pathFolders": [
     "Odometry Tests"
@@ -13,23 +13,23 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 60.0,
-  "robotMOI": 6.883,
+  "robotMass": 61.23496995,
+  "robotMOI": 2.207438555828181,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.048,
-  "driveGearing": 5.143,
+  "driveWheelRadius": 0.0508,
+  "driveGearing": 6.12,
   "maxDriveSpeed": 5.45,
   "driveMotorType": "krakenX60",
-  "driveCurrentLimit": 60.0,
-  "wheelCOF": 1.2,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "driveCurrentLimit": 40.0,
+  "wheelCOF": 1.5,
+  "flModuleX": 0.263525,
+  "flModuleY": 0.263525,
+  "frModuleX": 0.264,
+  "frModuleY": -0.263525,
+  "blModuleX": -0.263525,
+  "blModuleY": 0.263525,
+  "brModuleX": -0.263525,
+  "brModuleY": -0.263525,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
